--- a/src/components/templateImages/templateImages.css
+++ b/src/components/templateImages/templateImages.css
@@ -1,5 +1,13 @@
 .carousalWrapper{
       margin: 10px;
+      display: flex;
+      flex-direction: column;
+}
+
+.templatesHeading{
+margin-bottom: 30px;
+display: flex;
+justify-content: center;
 }
 
 .templateList{
