--- a/src/components/templateImages/templateImages.css
+++ b/src/components/templateImages/templateImages.css
@@ -18,7 +18,8 @@ justify-content: center;
 }
 
 .templateListItem{
-      width: 300px;
+      width: 400px;
+     height: 400px;
       margin: auto;
       /* position: relative; */
       cursor: pointer;
@@ -30,6 +31,7 @@ justify-content: center;
 
 .templateImg{
       width: 100%;
+      height: 100%;
       border-radius: 20px;
 }
 
