--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -14,6 +14,13 @@
   height: 90vh;
   align-items: center;
 }
+
+.resImg{
+  
+  justify-content: center;
+  width: 60%;
+  margin-left: 80px;
+}
 .resume-image {
   position: absolute;
   border-radius: 6px;
